# ooipy

./: .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CITATION.ccf  CITATION.cff  Demo_Don_Setiawan.ipynb  LICENSE  MANIFEST.in  Makefile  README.md  README.txt  ctd_demo.ipynb  debug.ipynb  demo.ipynb  demo_hydrophone_data.ipynb  dev-requirements.txt  dev_setup.sh  features_since_release.txt  flake8_log.txt  hydrophone_demo.ipynb  meta.yaml  ooi_data_processing_library.py  ooipy_demo.ipynb  ooipy_demo_ctd.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  verify_setup.py
.github/workflows/: flake8.yml  flake8_2.yml  lint.yml  linting.yml  pypi.yml  unit_test.yml
acoustic/: basic.py
conda_envs/: ooi_linux.yml  ooi_mac.yml  ooi_windows.yml  ooipy_rtd.yml  py3.10.yml  py3.11.yml  py3.6.yml  py3.7.yml  py3.8.yml  py3.9.yml
demos/: ctd_demo.ipynb  hydrophone_demo.ipynb
docs/: api_docs.md  conf.py  getting_started.md  index.md  refs.bib  requirements.txt
docs/source/: .conf.py.swp  citation_guide.rst  conf.py  ctd.rst  demos.rst  hydrophone.rst  index.rst  install_instructions.rst  license.rst  ooipy_description.rst  request.rst  scripts.rst  surface_buoy.rst  tools.rst  usage_instructions.rst  visualize.rst
docs/source/_build/html/: .buildinfo  ctd.html  genindex.html  help.html  index.html  license.html  objects.inv  request.html  search.html  searchindex.js  surface_buoy.html
docs/source/_build/html/.doctrees/: ctd.doctree  environment.pickle  help.doctree  hydrophone.doctree  index.doctree  license.doctree  request.doctree  surface_buoy.doctree  visualize.doctree
docs/source/_build/html/_sources/: help.rst.txt  index.rst.txt
docs/source/_static/: test_request.html
hydrophone/: Noise_Interferometry.py  basic.py
ooipy/: __init__.py  _version.py
ooipy/ctd/: basic.py
ooipy/hydrophone/: Noise_Interferometry.py  __init__.py  basic.py  calibration_by_assetID.csv  calibration_by_assetID.pkl
ooipy/request/: authentification.py  ctd_request.py  hydrophone.py  hydrophone_request.py
ooipy/scripts/: download_broadband.py  download_hydrophone_data.py
ooipy/tests/: Noise_Interferometry.ipynb  request.ipynb  test_Noise_Interferometry.ipynb  test_hydrophone_basic.ipynb  test_request.ipynb  test_request.py  test_visualize.ipynb
ooipy/tools/: ooiplotlib.py  workflow.py
ooipy/visualize/: ooiplotlib.py  visualize.py
request/: hydrophone.py  request.py
src/ooipy/: __init__.py  version.py
src/ooipy/ctd/: basic.py
src/ooipy/hydrophone/: basic.py
src/ooipy/request/: ctd_request.py  hydrophone_request.py
src/ooipy/scripts/: download_hydrophone_data.py
src/ooipy/tools/: ooiplotlib.py  workflow.py
tests/: request.ipynb  test_Noise_Interferometry.ipynb  test_hydrophone.py  test_hydrophone_basic.ipynb  test_request.ipynb  test_request.py  test_tools.ipynb
visualize/: visualize.py
