[metadata]
name = ooipy
description = A python toolbox for acquiring and analyzing Ocean Obvservatories Initiative (OOI) Data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ocean-Data-Lab/ooipy
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering
platforms = OS Independent

[options]
packages = find:
platforms = any
include_package_data = True
install_requires =
    obspy
    fsspec==2022.11.0
    aiohttp
    pandas
    numpy<1.22
    lxml
    xarray
    tqdm

python_requires = >=3.9
setup_requires =
    setuptools_scm
py_modules = _ooipy_version

[options.package_data]
* = hydrophone/*.csv

[options.packages.find]
exclude =
    tests*

[flake8]
exclude = setup.py,tests,__init__.py,ooipy/__init__.py,ooipy/request/__init__.py,ooipy/hydrophone/__init__.py,,ooipy/ctd/__init__.py,ooipy/surface_buoy/__init__.py,ooipy/visualize/__init__.py,docs
ignore = E999,N802,N806,W503,W504
max-line-length = 100
output-file = flake8_log.txt

[isort]
known_first_party = ooipy
known_third_party = _ooipy_version,fsspec,matplotlib,numpy,obspy,pandas,requests,scipy,setuptools
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
combine_as_imports = True
line_length = 100
skip =
    ooipy/__init__.py
    setup.py
